--- a/package.json
+++ b/package.json
@@ -7,5 +7,25 @@
   "repository": "https://github.com/livingdata-co/addok-server",
   "author": "Jérôme Desboeufs <jerome@livingdata.co>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "scripts": {
+    "lint": "xo"
+  },
+  "devDependencies": {
+    "xo": "^0.53.1"
+  },
+  "xo": {
+    "semicolon": false,
+    "space": 2,
+    "rules": {
+      "comma-dangle": [
+        "error",
+        "never"
+      ],
+      "unicorn/prevent-abbreviations": "off"
+    }
+  },
+  "engines": {
+    "node": ">= 18.12"
+  }
 }
