Add /batch route

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "semicolon": false,
     "space": 2,
     "rules": {
+      "camelcase": "off",
       "comma-dangle": [
         "error",
         "never"
