--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,6 @@
 ADDOK_CONFIG_MODULE=/path/to/addok.conf
 ADDOK_FILTERS=citycode,postcode,type
+ADDOK_CLUSTER_NUM_NODES=
+REDIS_HOST=
+REDIS_PORT=
+PYTHON_PATH=
