--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "start": "node server"
   },
   "dependencies": {
+    "@livingdata/tabular-data-helpers": "^0.0.6",
     "addok-cluster": "^0.3.0",
-    "addok-geocode-stream": "^0.20.0",
+    "addok-geocode-stream": "^0.21.0",
     "content-disposition": "^0.5.4",
     "cors": "^2.8.5",
+    "csv-write-stream": "^2.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
+    "into-stream": "^7.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1"
   },
