Update addok-cluster (0.4.0)

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,5 @@
 ADDOK_CONFIG_MODULE=/path/to/addok.conf
 ADDOK_FILTERS=citycode,postcode,type
 ADDOK_CLUSTER_NUM_NODES=
-REDIS_HOST=
-REDIS_PORT=
+ADDOK_REDIS_URL=redis://localhost:6379,redis://localhost:6380
 PYTHON_PATH=
