--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 ADDOK_CONFIG_MODULE=/path/to/addok.conf
+SQLITE_DB_PATH=/path/to/addok.db
 ADDOK_FILTERS=citycode,postcode,type
 ADDOK_CLUSTER_NUM_NODES=
 ADDOK_REDIS_URL=redis://localhost:6379,redis://localhost:6380
