--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "ava": "^5.2.0",
+    "c8": "^7.13.0",
+    "supertest": "^6.3.3",
     "xo": "^0.53.1"
   },
   "xo": {
