Add tests scripts & ava configuration

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "private": false,
   "scripts": {
     "lint": "xo",
+    "test": "c8 --all ava test/*.js",
+    "test-lcov": "c8 --reporter=lcov --reporter=text --all ava test/*.js",
     "start": "node server"
   },
   "dependencies": {
@@ -43,6 +45,11 @@
       ],
       "unicorn/prevent-abbreviations": "off",
       "import/no-unassigned-import": "off"
+    }
+  },
+  "ava": {
+    "environmentVariables": {
+      "ADDOK_FILTERS": "citycode,postcode,type"
     }
   },
   "engines": {
