Add Coveralls to GitHub Action

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,3 +23,8 @@ jobs:
           cache: "yarn"
       - run: yarn --frozen-lockfile
       - run: yarn lint
+      - run: yarn test-lcov
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
