--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,6 +24,8 @@ jobs:
       - run: yarn --frozen-lockfile
       - run: yarn lint
       - run: yarn test-lcov
+        env:
+          ADDOK_FILTERS: citycode,postcode,type
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
