--- a/.env.sample
+++ b/.env.sample
@@ -3,4 +3,6 @@ SQLITE_DB_PATH=/path/to/addok.db
 ADDOK_FILTERS=citycode,postcode,type
 ADDOK_CLUSTER_NUM_NODES=
 ADDOK_REDIS_URL=redis://localhost:6379,redis://localhost:6380
+ADDOK_REDIS_DATA_DIR=
+ADDOK_REDIS_STARTUP_TIMEOUT=30000
 PYTHON_PATH=
