--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "http-errors": "^2.0.0",
     "into-stream": "^8.0.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "on-finished": "^2.4.1"
   },
   "devDependencies": {
     "ava": "^6.1.1",
