Add some log to CSV geocoding

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,4 @@ ADDOK_REDIS_URL=redis://localhost:6379,redis://localhost:6380
 ADDOK_REDIS_DATA_DIR=
 ADDOK_REDIS_STARTUP_TIMEOUT=30000
 PYTHON_PATH=
+ENABLE_CSV_LOG=0
