fix: apply code review suggestions
- Use POSIX-compliant = instead of == in init-data.sh
- Add comment in docker-compose.yml about customizing URL
- Fix mount path in README.md (/app/archive.zip instead of /data/archive.zip)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build: .
     environment:
       ADDOK_FILTERS: citycode,postcode,type
+      # Customize the data source URL below.
       ADDOK_DATA_URL: https://adresse.data.gouv.fr/data/ban/adresses/latest/addok/addok-france-bundle.zip
     ports:
       - '5000:5000'
