--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-addok==1.3.0rc1
-addok-fr==1.0.1
-addok-france==1.1.3
-addok-sqlite-store==1.0.1
+addok[perf]==1.3.1
+addok-fr==1.1.0
+addok-france==1.2.0
+addok-sqlite-store==1.1.0
