--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.21.2",
     "http-errors": "^2.0.0",
     "into-stream": "^8.0.1",
+    "joi": "^18.0.1",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "on-finished": "^2.4.1"
