docs: update documentation for ADDOK_SERVER_CONFIG_PATH
- Replace ADDOK_FILTERS with ADDOK_SERVER_CONFIG_PATH in all docs
- Add server configuration file section in README
- Create addok-server.config.json.sample with filter examples
- Update .env.sample, docker-compose.yml and Dockerfile
- Document maxValues configuration for filters

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 ADDOK_CONFIG_MODULE=/path/to/addok.conf
 SQLITE_DB_PATH=/path/to/addok.db
-ADDOK_FILTERS=citycode,postcode,type
+ADDOK_SERVER_CONFIG_PATH=./addok-server.config.json
 ADDOK_CLUSTER_NUM_NODES=
 ADDOK_REDIS_URL=redis://localhost:6379,redis://localhost:6380
 ADDOK_REDIS_DATA_DIR=
